# pacopts

./: .gitignore  README.md  main.py  pacopts  pacopts.py  pacopts.sh  pyproject.toml
