[tool.poetry]
name = "pacopts"
version = "0.1.0"
description = ""
authors = ["Andrii Derhach <thequasar7@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
termcolor = "^2.4.0"

[tool.poetry.scripts]
pacopts = 'pacopts:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
